force-app/main/default/objects/Pais__c/fields/Cod_Pais__c.field-meta.xml
<CustomField>
    <fullName>Cod_Pais__c</fullName>
    <label>Cod País</label>
    <length>2</length>
    <type>Text</type>
</CustomField>