force-app/main/default/objects/Pais__c/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <label>Country/Region Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>