force-app/main/default/objects/Pais__c/fields/Nombre_Zonas__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Zonas__c</fullName>
    <label>Nombre Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUR AMERICA 1</fullName>
            </value>
            <value>
                <fullName>SUR AMERICA 2</fullName>
            </value>
            <value>
                <fullName>CENTRO Y NORTE AMERICA, CARIBE</fullName>
            </value>
            <value>
                <fullName>EUROPA</fullName>
            </value>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>RESTO DEL MUNDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>